HEAD
	+ In restore postpone recreation of mail directories until next
	  save change
	+ Fix log helper exception trying to retrieve vdomains from LDAP when
	  samba module is disabled
4.0.2
	+ Avoid breaking dovecot certificate when upgrading from 3.2
4.0.1
	+ Add link in mail vdomain model to openchange virtual domains settings
	+ Allow to create group alias on empty groups
	+ Removed no longer existent smtp_generic_maps
4.0
	+ Load openchange plugin if openchange enabled
	+ Added Zentyal.MailUserAddon.editFormWillRemoveAccount JS method
	+ Prepopulate installation wizard by default with the Samba domain
	+ Encrypt external accounts passwords stored in LDAP
	+ Fixed periodical removal of Trash and Spam mails
	+ Fixed bug in initialSetup which triggered migration on fresh install
	+ Increased mail_max_userip_connections to 20 for IMAP protocol
	+ Set version to 4.0
	+ Fixed values in fetchmail widget status
	+ Fixed some labels which referenced deprecated user corner
	+ Do not allow both keep and fetch all options in external accounts
	+ Fixed group mail accounts and their aliases
	+ Do not move mailbox to .bak if directory already exist
	+ Migrate mboxes path to Maildir when upgrading from 3.4
	+ Fixed bug when removing virtual domain
	+ Adding a virtual domain now can update old unmanaged accounts
	+ Fixed errors related with users which has account on a umanaged domain
	+ Added migration code to handle new Dovecot certs
	+ Fixed group mail alias creation
	+ Fixed problems with checking mail address duplicates
	+ Added fetchmail again
	+ Fix _accountExists ldap search filter
3.5.1
	+ Removed spurious warnings on mail services widget
	+ Disabled deprecated autocreate dovecot plugin, using mailbox and
	  namespaces instead
	+ Workaround in members table against losing of directory
	  parameter/attribute
3.5
	+ Fix groupaliases.cf parameter stub
	+ Adapt alias management to constraints by mailboxRelatedObject